# oop-group-project

./: CMakeLists.txt  ChefMain.h  Client.cpp  Client.h  ClientMain.h  Hotel.cpp  Hotel.h  ManagerMain.h  Meal.h  Restaurant.cpp  Restaurant.h  main.cpp
InternDirect/: InternChef.cpp  InternChef.h  InternDef.cpp  InternDef.h  InternManager.cpp  InternManager.h  InternReception.cpp  InternReception.h  InternRoomService.cpp  InternRoomService.h  InternWaiter.cpp  InternWaiter.h
MemberDirect/: Chef.cpp  Chef.h  Manager.cpp  Manager.h  Member.cpp  Member.h  Reception.cpp  Reception.h  RoomService.cpp  RoomService.h  Waiter.cpp  Waiter.h
RoomDirect/: Lux.cpp  Lux.h  Lyuks.cpp  Lyuks.h  Restaurant.h  Room.cpp  Room.h  Standart.cpp  Standart.h  VIP.cpp  VIP.h
